--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <title>O o.js by chronokz</title>
+    <title>O_o.js by chronokz</title>
     <link rel="stylesheet" href="stylesheets/styles.css">
     <link rel="stylesheet" href="stylesheets/pygment_trac.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
@@ -31,7 +31,7 @@
 
       <section>
         <div id="title">
-          <h1>O o.js</h1>
+          <h1>O_o.js</h1>
           <p>JavaScript Kit</p>
           <hr>
           <span class="credits left">Project maintained by <a href="https://github.com/chronokz">chronokz</a></span>
@@ -39,40 +39,46 @@
         </div>
 
         <h3>
-<a name="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages"><span class="octicon octicon-link"></span></a>Welcome to GitHub Pages.</h3>
+<a name="modal-alert" class="anchor" href="#modal-alert"><span class="octicon octicon-link"></span></a>Modal Alert</h3>
 
-<p>This automatic page generator is the easiest way to create beautiful pages for all of your projects. Author your page content here using GitHub Flavored Markdown, select a template crafted by a designer, and publish. After your page is generated, you can check out the new branch:</p>
+<div class="highlight highlight-javascript"><pre><span class="c1">// Show Alert (equal Show Success)</span>
+<span class="nx">O_o</span><span class="p">.</span><span class="nx">alert</span><span class="p">(</span><span class="s1">'Simple message'</span><span class="p">);</span>
 
-<pre><code>$ cd your_repo_root/repo_name
-$ git fetch origin
-$ git checkout gh-pages
-</code></pre>
+<span class="c1">// Show Success</span>
+<span class="nx">O_o</span><span class="p">.</span><span class="nx">alert</span><span class="p">(</span><span class="s1">'Simple message'</span><span class="p">,</span> <span class="s1">'success'</span><span class="p">);</span>
 
-<p>If you're using the GitHub for Mac, simply sync your repository and you'll see the new branch.</p>
+<span class="c1">// Show Warning</span>
+<span class="nx">O_o</span><span class="p">.</span><span class="nx">alert</span><span class="p">(</span><span class="s1">'Simple message'</span><span class="p">,</span> <span class="s1">'warning'</span><span class="p">);</span>
 
-<h3>
-<a name="designer-templates" class="anchor" href="#designer-templates"><span class="octicon octicon-link"></span></a>Designer Templates</h3>
+<span class="c1">// Show Danger</span>
+<span class="nx">O_o</span><span class="p">.</span><span class="nx">alert</span><span class="p">(</span><span class="s1">'Simple message'</span><span class="p">,</span> <span class="s1">'danger'</span><span class="p">);</span>
 
-<p>We've crafted some handsome templates for you to use. Go ahead and continue to layouts to browse through them. You can easily go back to edit your page before publishing. After publishing your page, you can revisit the page generator and switch to another theme. Your Page content will be preserved if it remained markdown format.</p>
+<span class="c1">// Show Info</span>
+<span class="nx">O_o</span><span class="p">.</span><span class="nx">alert</span><span class="p">(</span><span class="s1">'Simple message'</span><span class="p">,</span> <span class="s1">'info'</span><span class="p">);</span>
 
-<h3>
-<a name="rather-drive-stick" class="anchor" href="#rather-drive-stick"><span class="octicon octicon-link"></span></a>Rather Drive Stick?</h3>
+<span class="c1">// Show Primary</span>
+<span class="nx">O_o</span><span class="p">.</span><span class="nx">alert</span><span class="p">(</span><span class="s1">'Simple message'</span><span class="p">,</span> <span class="s1">'primary'</span><span class="p">);</span>
 
-<p>If you prefer to not use the automatic generator, push a branch named <code>gh-pages</code> to your repository to create a page manually. In addition to supporting regular HTML content, GitHub Pages support Jekyll, a simple, blog aware static site generator written by our own Tom Preston-Werner. Jekyll makes it easy to create site-wide headers and footers without having to copy them across every page. It also offers intelligent blog support and other advanced templating features.</p>
+<span class="c1">// Show Default</span>
+<span class="nx">O_o</span><span class="p">.</span><span class="nx">alert</span><span class="p">(</span><span class="s1">'Simple message'</span><span class="p">,</span> <span class="s1">'default'</span><span class="p">);</span>
 
-<h3>
-<a name="authors-and-contributors" class="anchor" href="#authors-and-contributors"><span class="octicon octicon-link"></span></a>Authors and Contributors</h3>
-
-<p>You can <a href="https://github.com/blog/821" class="user-mention">@mention</a> a GitHub username to generate a link to their profile. The resulting <code>&lt;a&gt;</code> element will link to the contributor's GitHub Profile. For example: In 2007, Chris Wanstrath (<a href="https://github.com/defunkt" class="user-mention">@defunkt</a>), PJ Hyett (<a href="https://github.com/pjhyett" class="user-mention">@pjhyett</a>), and Tom Preston-Werner (<a href="https://github.com/mojombo" class="user-mention">@mojombo</a>) founded GitHub.</p>
-
-<h3>
-<a name="support-or-contact" class="anchor" href="#support-or-contact"><span class="octicon octicon-link"></span></a>Support or Contact</h3>
-
-<p>Having trouble with Pages? Check out the documentation at <a href="http://help.github.com/pages">http://help.github.com/pages</a> or contact <a href="mailto:support@github.com">support@github.com</a> and we’ll help you sort it out.</p>
+<span class="c1">// Show Link</span>
+<span class="nx">O_o</span><span class="p">.</span><span class="nx">alert</span><span class="p">(</span><span class="s1">'Simple message'</span><span class="p">,</span> <span class="s1">'link'</span><span class="p">);</span>
+</pre></div>
       </section>
 
     </div>
     <!--[if !IE]><script>fixScale(document);</script><![endif]-->
-    
+              <script type="text/javascript">
+            var gaJsHost = (("https:" == document.location.protocol) ? "https://ssl." : "http://www.");
+            document.write(unescape("%3Cscript src='" + gaJsHost + "google-analytics.com/ga.js' type='text/javascript'%3E%3C/script%3E"));
+          </script>
+          <script type="text/javascript">
+            try {
+              var pageTracker = _gat._getTracker("UA-44438850-1");
+            pageTracker._trackPageview();
+            } catch(err) {}
+          </script>
+
   </body>
 </html>
