Translated to english

--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@ O_o.alert('Simple message', 'link');
 	</div>
 
 	<div class="page-header">
-		<h3>Modal Conrifrm</h3>
+		<h3>Modal Confirm</h3>
 	</div>
 	<div class="bs-example">
 		<button class="btn btn-danger o_o-confirm">Show Confirm</button>
