--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 	<link href="vendors/highlight.js/styles/tomorrow-night-eighties.css" type="text/css" rel="stylesheet">
 	<link href="css/demo.css" type="text/css" rel="stylesheet">
 
-	<link href="css/O_o.css" type="text/css" rel="stylesheet">
+	<link href="https://raw.github.com/chronokz/O_o.js/master/css/O_o.css" type="text/css" rel="stylesheet">
 
 	<!-- JS Scripts -->
 	<!-- 
@@ -29,7 +29,7 @@
 	hljs.initHighlightingOnLoad();
 	</script>
 
-	<script src="js/O_o.js"></script>
+	<script src="https://raw.github.com/chronokz/O_o.js/master/js/O_o.js"></script>
 
 </head>
 
