Adding examples to index.html

--- a/index.html
+++ b/index.html
@@ -36,6 +36,28 @@
 <body>
 	<h1>O_o.js <span class="muted">Shocked Javascript Kit</span></h1>
 
+	<!-- Including -->
+	<div class="page-header">
+		<h3>Include into page</h3>
+	</div>
+	<div class="bs-example">
+		<a href="https://raw.github.com/chronokz/O_o.js/master/css/O_o.css">O_o.css</a>
+		<br>
+		<a href="https://raw.github.com/chronokz/O_o.js/master/js/O_o.js">O_o.js</a>
+	</div>
+	<div class="highlight html">
+	<pre>
+		<code>
+			<!-- Use O_o.css -->
+			<link href="https://raw.github.com/chronokz/O_o.js/master/css/O_o.css" type="text/css" rel="stylesheet">
+			<!-- Use jQuery -->
+			<script src="http://code.jquery.com/jquery-latest.min.js"></script>
+			<!-- Use O_o.js -->
+			<script src="https://raw.github.com/chronokz/O_o.js/master/js/O_o.js"></script>
+		</code>
+	</pre>
+	</div>
+
 	<!-- Modals -->
 	<div class="page-header">
 		<h3>Modal Alert</h3>
