Fixing index.html

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 	<link href="vendors/highlight.js/styles/tomorrow-night-eighties.css" type="text/css" rel="stylesheet">
 	<link href="css/demo.css" type="text/css" rel="stylesheet">
 
-	<link href="https://raw.github.com/chronokz/O_o.js/master/css/O_o.css" type="text/css" rel="stylesheet">
+	<link href="https://rawgithub.com/chronokz/O_o.js/master/css/O_o.css" type="text/css" rel="stylesheet">
 
 	<!-- JS Scripts -->
 	<!-- 
@@ -29,7 +29,7 @@
 	hljs.initHighlightingOnLoad();
 	</script>
 
-	<script src="https://raw.github.com/chronokz/O_o.js/master/js/O_o.js"></script>
+	<script src="https://rawgithub.com/chronokz/O_o.js/master/js/O_o.js" type="text/javascript"></script>
 
 </head>
 
@@ -48,12 +48,13 @@
 	<div class="highlight html">
 	<pre>
 		<code>
-			<!-- Use O_o.css -->
-			<link href="https://raw.github.com/chronokz/O_o.js/master/css/O_o.css" type="text/css" rel="stylesheet">
-			<!-- Use jQuery -->
-			<script src="http://code.jquery.com/jquery-latest.min.js"></script>
-			<!-- Use O_o.js -->
-			<script src="https://raw.github.com/chronokz/O_o.js/master/js/O_o.js"></script>
+&lt;!-- Use O_o.css --&gt;
+&lt;link href="css/O_o.css" type="text/css" rel="stylesheet"&gt;
+
+&lt;!-- Use jQuery --&gt;
+&lt;script src="http://code.jquery.com/jquery-latest.min.js"&gt;&lt;/script&gt;
+&lt;!-- Use O_o.js --&gt;
+&lt;script src="js/O_o.js"&gt;&lt;/script&gt;
 		</code>
 	</pre>
 	</div>
